--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+  <base href="https://Asmamaw-kas.github.io/juice-delivery/" />
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="./src/assets/icons/logo1.jpg" />
